--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "qs": "^6.10.1",
+    "recorder-core": "^1.2.23070100",
     "screenfull": "4.2.0",
     "sockjs-client": "^1.6.1",
     "sortablejs": "1.8.4",
@@ -72,8 +73,6 @@
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
-    "@vue/eslint-config-standard": "^4.0.0",
     "@babel/parser": "^7.7.4",
     "@babel/register": "7.0.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.2.1",
@@ -81,6 +80,7 @@
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-unit-jest": "^4.5.13",
     "@vue/cli-service": "4.5.13",
+    "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
@@ -90,14 +90,17 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
-    "connect": "3.6.6",
     "compression-webpack-plugin": "5.0.2",
+    "connect": "3.6.6",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.14.0",
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.1",
     "husky": "1.3.1",
+    "less": "^4.2.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "8.1.5",
+    "node-sass": "^6.0.1",
     "plop": "2.3.0",
     "sass": "1.32.13",
     "sass-loader": "^10.1.1",
